--- a/public/css/main.css
+++ b/public/css/main.css
@@ -36,105 +36,6 @@
 }
 
 
-#user{
-    width: 90%;
-    margin: auto;
-    margin-top: 20px;
-    background: #eee;
-    padding: 40px;
-}
-#user hr{
-    border-color: #f00 !important;
-    height: 1px;
-    max-width: 200px;
-    margin: auto;
-    background: #000 !important;
-}
-#user h1{
-    font-size: 25px;
-}
-
-.snack__content {
-    color: #fff !important;
-}
-#post #img img{
-    max-height: 300px;
-    margin: auto;
-}
-
-.input-group .input-group__details::before {
-    background-color: #e1e1e1 !important;
-    /*z-index: 1000 !important;*/
-    /*height: 2px !important;*/
-}
-.input-group--text-field label {
-    color: #696969;
-}
-
-.input-group.input-group--error .input-group__details::before {
-    background-color: #f00 !important;
-}
-
-
-.input-group__details:after {
-    background-color: #00f;
-    color: #f00;
-    top: 0;
-    height: 2px;
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-transform-origin: center center 0;
-    transform-origin: center center 0;
-    width: 100%;
-    z-index: 1;
-}
-
-.input-group.input-group--text-field:not(.input-group--single-line):not(.input-group--error).input-group--focused label {
-    color: #00f;
-}
-
-.input-group.input-group--error label {
-    color: #f00;
-}
-.input-group.input-group--error .input-group__messages {
-    color: #f00;
-}
-
-.application--wrap {
-    min-height: 10vh !important;
-}
-
-.btn-outline{
-    color: #000 !important;
-}
-
-
-.success, .bg-danger{
-    background: #dff0d8 !important;
-}
-
-.theme--light .navigation-drawer
-.list__tile:not(.list__tile--active),
-.application .theme--light.navigation-drawer
-.list__tile:not(.list__tile--active) {
-    text-decoration: none !important;
-}
-
-div.dataTables_wrapper div.dataTables_filter input {
-      background-color: transparent;
-    border: none;
-    border-bottom: 1px solid #9e9e9e;
-    border-radius: 0;
-    outline: none;
-    height: 3rem;
-    width: 100%;
-    font-size: 1rem;
-    margin: 0 0 15px 0;
-    padding: 0;
-    box-shadow: none;
-    box-sizing: content-box;
-    transition: all 0.3s;
-}
 
 .fade-enter-active{
   transition: opacity 1s, transform 1s;
@@ -144,67 +45,39 @@ div.dataTables_wrapper div.dataTables_filter input {
   transform: translate(20px);
 }
 
-.has-text-danger{
-    color: #fb6b6b !important;
-}
 
- #socialite a {
-    text-decoration: none;
+/* Header */
+#navigation .v-list-item--link{
+    color: #fff !important;
 }
-
-.v-list__tile--link{
-    font-size: 15px !important;
-    text-decoration: none !important;
-}
-
-.v-datatable tr{
-    font-size: 20px !important;
-    border-bottom: #949494 1px solid !important;
-}
-.v-datatable tr:hover{
-    background-color: #eeeeee !important;
-}
-
-.v-datatable tr td{
-    border-right: #949494 1px solid !important;
-    font-size: 15px !important;
-}
-
-.v-datatable tr th{
-    font-size: 17px !important;
-}
-
-.vue-barcode-element{
-    height: 65px !important;
-    margin-top: -25px !important;
-}
-
-#navigation .v-list__tile:hover{
+#navigation .v-list-item--link:hover{
     background-color: #424242 !important;
     cursor: pointer !important;
     color: #fff !important;
 }
 
-#navigation .v-list__tile--link, #navigation .v-list__tile{
+
+#navigation .v-list-item--link, #navigation .v-list-item--link{
     border-radius: 30px;
     margin: 8px 0 !important;
     width: 80%;
 }
-#navigation .router-link-exact-active, #navigation .v-list__group__items .router-link-exact-active{
+#navigation .router-link-exact-active, #navigation .v-list-group .router-link-exact-active{
     background: #fff !important;
     color: rgba(28, 35, 90, 0.79) !important;
     /* margin: 10px 15px 0; */
     border-radius: 30px;
     text-decoration: none;
     position: relative;
-    padding: 11px 8px;
+    /* padding: 5px 3px; */
     line-height: 20px;
+
 }
 #navigation .router-link-exact-active:hover{
     background: #fff !important;
     color: #000 !important;
 }
-#navigation .v-list__group__items .router-link-exact-active:hover{
+#navigation .v-list-group .router-link-exact-active:hover{
     background: #fff !important;
     color: #000 !important;
 }
@@ -212,115 +85,114 @@ div.dataTables_wrapper div.dataTables_filter input {
 #navigation .v-navigation-drawer{
     width: 290px !important;
 }
-#navigation .v-list__tile__title {
+#navigation .v-list-item__title {
     line-height: 20px !important;
 }
 #navigation .theme--light.v-icon {
     color: #fff !important;
 }
-.v-content{
-    background: #f8fafc !important;
-    margin-top: -100px !important;
+
+.navigation-drawer--fixed:not(.v-navigation-drawer--temporary):not(.v-navigation-drawer--is-mobile) {
+    width: 300px !important;
 }
 
-#navigation .v-list__tile--link .material-icons:hover, #navigation .v-list__tile  .material-icons:hover, .fa-barcode:hover{
+.v-content{
+    background: #f8fafc !important;
+    /* margin-top: -700px !important; */
+    margin-left: 40px !important;
+    padding: 10px;
+}
+.v-application--wrap {
+    background: #f8fafc !important;
+}
+.v-application--wrap {
+    min-height: 0 !important;
+}
+/*  */
+#navigation .v-list-item--link .material-icons:hover, #navigation .v-list-item--link  .material-icons:hover, .fa-barcode:hover{
     box-shadow: 0 9px 30px -6px rgba(255, 255, 255, 0.43) !important;
     padding: 5px !important;
     border-radius: 50% !important;
 }
-#navigation .router-link-exact-active .material-icons, .v-list__group__items .router-link-exact-active .material-icons, .fa-barcode {
+/*  */
+#navigation .router-link-exact-active .material-icons, .v-list-group .router-link-exact-active .material-icons, .fa-barcode {
     box-shadow: 0 9px 30px -6px rgba(255, 54, 54, .5) !important;
     padding: 5px !important;
     border-radius: 50% !important;
 }
-/* #login .v-content{
-    background: url('storage/ps/landS.jpg') !important
-} */
-/* .link-router{
-    background: #fff !important;
-    color: rgba(28, 35, 90, 0.79) !important;
-} */
-.theme--light.v-table tbody tr {
-    /* background: linear-gradient(to bottom, rgba(52, 144, 220, 0.02), rgba(52, 144, 220, 0.12)); */
-    /* box-shadow: 0 9px 30px -6px rgba(255, 255, 255, 0.43) !important; */
-}
-#contain {
-    margin-top: -35px;
+
+.v-list__tile__action {
+    align-items: center !important;
 }
 
-#headerwrapper1{
-	position: relative;
-	margin: 0px;
-	padding: 0px;
-	overflow: hidden;
-	height: 210px;
-	background: url(/storage/img/8.jpg) no-repeat;
-	background-size: 100% 700px;
-	background-attachment: fixed;
-	background-position: top center;
-	cursor: pointer;
+.v-list-item__content {
+    margin-left: 32px;
 }
 
-#logotext h1 {
-    font-size: 90px;
-    z-index: 1000;
-    padding: 70px 0;
-    margin: -30px 0 0 350px;
-    font-weight: 700;
-}
+/* Header */
 
-#logotext h1 span{
-	color: #0fb7a4;
-}
-#logotext{
-	position: absolute;
-	width: 90%;
-	height: 180px;
-	background-repeat: no-repeat;
-	background-size: 50% 180px;
-	background-position: center;
-	top: 50%;
-	cursor: pointer;
-	margin-top: -90px;
-}
-#for-flower1{
-	position: absolute;
-	width: 25%;
-	height: 100px;
-	/* background-image: url(/storage/kedia.jpg); */
-	background-repeat: no-repeat;
-	background-size: 70% 180px;
-	background-position: center;
-	top: 500px;
-	cursor: pointer;
-	margin-left: -60px;
-}
-/* .application--wrap {
-    min-height: 0vh !important;
-} */
-.panel-header{height:260px;padding-top:80px;padding-bottom:45px;background:#141e30;background:linear-gradient(90deg,#0c2646,#204065 60%,#2a5788);position:relative;overflow:hidden}.panel-header .header .title{color:#fff}.panel-header .header .category{max-width:600px;color:hsla(0,0%,100%,.5);margin:0 auto;font-size:13px}.panel-header .header .category a{color:#fff}.panel-header-sm{height:135px}.panel-header-lg{height:380px}.card{border:0;border-radius:.1875rem;display:inline-block;position:relative;width:100%;margin-bottom:20px;box-shadow:0 1px 15px 1px rgba(39,39,39,.1)}.card .card-body{padding:15px 15px 10px}
-
-
+/* width */
 ::-webkit-scrollbar {
-    width: 6px;
-    height: 6px;
-  }
+  width: 6px;
+  height: 6px;
+}
 
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px white;
-    border-radius: 10px;
-  }
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px white;
+  border-radius: 10px;
+}
 
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #dddee0;
-    border-radius: 10px;
-  }
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #dddee0;
+  border-radius: 10px;
+}
 
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #c0cae0;
-    width: 10px;
-    height: 10px;
-  }
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #c0cae0;
+  width: 10px;
+  height: 10px;
+}
+.v-card__text {
+    padding: 16px;
+    width: 100%;
+    overflow: hidden !important;
+}
+
+.pagination-link.is-current {
+    background-color: #1867c1 !important;
+    border-color: #1867c1 !important;
+}
+
+
+
+.application--wrap {
+    background: #fff !important;
+}
+
+
+table.vgt-table {
+    /* display: block; */
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.elevation-2 {
+    box-shadow: 0 3px 1px -2px #1975d278,0 2px 2px 0 #1975d278,0 1px 5px 0 #1975d278 !important;
+}
+.v-avatar {
+    height: 10px !important;
+    width: 10px !important;
+    min-width: 10px !important;
+    margin-left: 40% !important;
+}
+
+#navigation .v-list-item--link, #navigation .v-list-item--link {
+    text-decoration: none;
+}
+
+.v-application .text-center, h3, .h3 {
+    color: #1564c0 !important;
+}
