--- a/public/css/main.css
+++ b/public/css/main.css
@@ -209,3 +209,53 @@ table.vgt-table {
         max-height: 30vh;
     }
 }
+
+
+
+.box-title h3 {
+    position: relative;
+    float: none;
+    text-align: center;
+    font-size: 20px !important;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.box-title h3:before {
+    right: auto;
+}
+
+.box-title h3:before {
+    content: "\f005";
+    font-family: FontAwesome;
+    font-size: 16px;
+    color: #18bcec;
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    margin-left: -15px;
+    border: 1px #ccc solid;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    line-height: 23px;
+    background: #fff;
+    z-index: 9;
+    margin-top: 20px;
+}
+
+.box-title h3:after {
+    content: "";
+    height: 2px;
+    background: #ebebeb;
+    position: absolute;
+    bottom: -8px;
+    left: 0;
+    right: 0;
+}
+
+
+
+.el-carousel__indicators {
+    display: none;
+}
